@@ -26,28 +26,28 @@ is Spreadsheet::HTML::generate( %attr ),
 ;
 
 $html = '<table border="0" cellpadding="0" cellspacing="0"><tr><th height="4" style="background-color: #000000" width="8"></th><th height="4" style="background-color: #000000" width="8"></th><th></th><th></th></tr><tr><td height="4" style="background-color: #000000" width="8"></td><td height="4" style="background-color: #000000" width="8"></td><td></td><td></td></tr><tr><td height="4" style="background-color: #FF0000" width="8"></td><td></td><td height="4" style="background-color: #000000" width="8"></td><td height="4" style="background-color: #000000" width="8"></td></tr><tr><td height="4" style="background-color: #00FF00" width="8"></td><td height="4" style="background-color: #0000FF" width="8"></td><td height="4" style="background-color: #000000" width="8"></td><td height="4" style="background-color: #000000" width="8"></td></tr></table>';
-is $table->generate( off => 'FFFFFF' ),
+is $table->generate( alpha => 'FFFFFF' ),
     $html,
-    "off param for image via method"
+    "alpha param for image via method"
 ;
 
-is Spreadsheet::HTML::generate( %attr, off => 'FFFFFF' ),
+is Spreadsheet::HTML::generate( %attr, alpha => 'FFFFFF' ),
     $html,
-    "off param for image via procedure"
+    "alpha param for image via procedure"
 ;
 
 $html = '<table><tr><th height="4" style="background-color: #000000" width="8"></th><th height="4" style="background-color: #000000" width="8"></th><th></th><th></th></tr><tr><td height="4" style="background-color: #000000" width="8"></td><td height="4" style="background-color: #000000" width="8"></td><td></td><td></td></tr><tr><td height="4" style="background-color: #FF0000" width="8"></td><td></td><td height="4" style="background-color: #000000" width="8"></td><td height="4" style="background-color: #000000" width="8"></td></tr><tr><td height="4" style="background-color: #00FF00" width="8"></td><td height="4" style="background-color: #0000FF" width="8"></td><td height="4" style="background-color: #000000" width="8"></td><td height="4" style="background-color: #000000" width="8"></td></tr></table>';
-is $table->generate( off => 'FFFFFF', table => {} ),
+is $table->generate( alpha => 'FFFFFF', table => {} ),
     $html,
-    "off param for image via method"
+    "alpha param for image via method"
 ;
 
-is Spreadsheet::HTML::generate( %attr, off => 'FFFFFF', table => {} ),
+is Spreadsheet::HTML::generate( %attr, alpha => 'FFFFFF', table => {} ),
     $html,
-    "off param for image via procedure"
+    "alpha param for image via procedure"
 ;
 
-my %extra = ( data => [ 1 .. 16 ], wrap => 4, off => 'FFFFFF' );
+my %extra = ( data => [ 1 .. 16 ], wrap => 4, alpha => 'FFFFFF' );
 
 $html = '<table border="0" cellpadding="0" cellspacing="0"><tr><th height="4" style="background-color: #000000" width="8">1</th><th height="4" style="background-color: #000000" width="8">2</th><th>3</th><th>4</th></tr><tr><td height="4" style="background-color: #000000" width="8">5</td><td height="4" style="background-color: #000000" width="8">6</td><td>7</td><td>8</td></tr><tr><td height="4" style="background-color: #FF0000" width="8">9</td><td>10</td><td height="4" style="background-color: #000000" width="8">11</td><td height="4" style="background-color: #000000" width="8">12</td></tr><tr><td height="4" style="background-color: #00FF00" width="8">13</td><td height="4" style="background-color: #0000FF" width="8">14</td><td height="4" style="background-color: #000000" width="8">15</td><td height="4" style="background-color: #000000" width="8">16</td></tr></table>';
 
